syntax = "proto3";

package kvs;

service KeyValueStore {
    rpc EchoMe (EchoRequest) returns (EchoReply);
    rpc Set (SetRequest) returns (SetReply);
    rpc Get (GetRequest) returns (GetReply);
}

message EchoRequest {
    string message = 1;
}

message EchoReply {
    string message = 1;
}

message SetRequest {
    string key = 1;
    string value = 2;
}

message SetReply {
    optional string old_value = 1;
}

message GetRequest {
    string key = 1;
}

message GetReply {
    optional string value = 1;
}
